--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,14 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.sm.wolong</groupId>
     <artifactId>wolong-whitelist</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-
     <name>wolong-whitelist Maven Webapp</name>
     <url>http://e.sm.cn</url>
-
-    <profiles>
-
-
-    </profiles>
-
+    <profiles/>
     <properties>
         <spring.version>4.2.6.RELEASE</spring.version>
         <junit.version>4.12</junit.version>
@@ -23,10 +17,17 @@
         <apache-lang.version>3.4</apache-lang.version>
         <google-guava.version>19.0</google-guava.version>
         <apache-fileupload.version>1.3.1</apache-fileupload.version>
+        <apache-beanutil.version>1.9.2</apache-beanutil.version>
+        <apache-commons-io.version>2.5</apache-commons-io.version>
+        <apache-commons-codec.version>1.10</apache-commons-codec.version>
+        <aspectj.version>1.8.7</aspectj.version>
+        <jackson.version>2.8.3</jackson.version>
+        <logback.version>1.1.3</logback.version>
+        <logback-ext.version>0.1.4</logback-ext.version>
+        <logback-janino>3.0.6</logback-janino>
+        <slf4j.version>1.7.21</slf4j.version>
     </properties>
-
     <dependencies>
-
         <!-- spring framework -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -78,7 +79,35 @@
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-aop</artifactId>
+            <version>${spring.version}</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>${spring.version}</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <!-- 切面 -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+            <version>${aspectj.version}</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectj.version}</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
         <!-- test framework -->
         <dependency>
             <groupId>org.springframework</groupId>
@@ -93,14 +122,13 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
-
         <!-- utils -->
+        <!--  apache commons util -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
             <version>${apache-collections4.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-csv -->
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
@@ -111,19 +139,50 @@
             <artifactId>commons-lang3</artifactId>
             <version>${apache-lang.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
             <version>${apache-fileupload.version}</version>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>${apache-beanutil.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${apache-commons-io.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${apache-commons-codec.version}</version>
+        </dependency>
+
+        <!-- google guava -->
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${google-guava.version}</version>
         </dependency>
 
+        <!-- jackson -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
         <!-- servlet 依赖 -->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -131,32 +190,145 @@
             <version>3.0.1</version>
             <scope>provided</scope>
         </dependency>
-
+        <!-- 日志系统 -->
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.janino</groupId>
+            <artifactId>janino</artifactId>
+            <version>3.0.6</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${slf4j.version}</version>
+        </dependency>
     </dependencies>
     <build>
-        <finalName>wolong-whitelist</finalName>
+        <finalName>${project.name}-${project.version}</finalName>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.eclipse.jetty</groupId>
+                    <artifactId>jetty-maven-plugin</artifactId>
+                    <version>9.2.13.v20150730</version>
+                    <configuration>
+                        <httpConnector>
+                            <port>5100</port>
+                        </httpConnector>
+                        <webApp>
+                            <contextPath>/</contextPath>
+                            <!--<descriptor>${basedir}/src/main/webapp/WEB-INF/web.xml</descriptor>-->
+                            <!--<defaultsDescriptor>${basedir}/src/main/webapp/WEB-INF/webdefault.xml</defaultsDescriptor>-->
+                        </webApp>
+                        <scanIntervalSeconds>10</scanIntervalSeconds>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-war-plugin</artifactId>
+                    <version>2.4</version>
+                    <configuration>
+                        <warName>${project.name}</warName>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-dependency-plugin</artifactId>
+                    <version>2.10</version>
+                    <executions>
+                        <execution>
+                            <id>Download Java Sources</id>
+                            <phase>generate-sources</phase>
+                            <goals>
+                                <goal>sources</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
         <plugins>
+            <!-- 编译器源代码设置-->
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.7</source>
+                    <target>1.7</target>
+                    <encoding>utf-8</encoding>
+                    <!-- 如果测试代码出现编译错误则直接略过 -->
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+            <!-- 测试阶段如果测试失败不影响打包结果 -->
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.18.1</version>
+                <configuration>
+                    <testFailureIgnore>true</testFailureIgnore>
+                </configuration>
+            </plugin>
+            <!-- 打包的时候将源代码打包进去 -->
+            <plugin>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.4</version>
+                <executions>
+                    <execution>
+                        <id>Attach-Sources</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- 资源文件设置编码 -->
+            <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <encoding>utf-8</encoding>
+                </configuration>
+            </plugin>
+            <!-- 检查maven的依赖关系,判断是否存在依赖冲突 -->
+            <plugin>
+                <artifactId>maven-enforcer-plugin</artifactId>
+                <version>1.4.1</version>
+                <executions>
+                    <execution>
+                        <id>Wolong Dependency Check</id>
+                        <phase>validate</phase>
+                        <goals>
+                            <goal>enforce</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <rules>
+                        <DependencyConvergence/>
+                    </rules>
+                </configuration>
+            </plugin>
+            <plugin>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <!-- todo -->
+                    <warName>warName</warName>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-
     <repositories>
-        <repository>
-            <id>shenma-nexus</id>
-            <url>http://100.85.69.70:8081/nexus/content/repositories/releases</url>
-        </repository>
-        <repository>
-            <id>shenma-nexus-snapshots-tddl</id>
-            <name>local private nexus</name>
-            <url>http://100.85.69.70:8081/nexus/content/repositories/snapshots</url>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-                <updatePolicy>always</updatePolicy>
-                <checksumPolicy>warn</checksumPolicy>
-            </snapshots>
-        </repository>
         <repository>
             <id>nexus</id>
             <name>local private nexus</name>
@@ -176,18 +348,18 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
-        <repository>
-            <id>cloudera</id>
-            <url>http://repo1.maven.org/maven2/org/apache/hbase/hbase/0.98.0-hadoop1/</url>
-        </repository>
-        <repository>
-            <id>shenma-nexus-public</id>
-            <url>http://100.85.69.70:8081/nexus/content/groups/public</url>
-        </repository>
-        <repository>
-            <id>shenma-nexus-snapshots</id>
-            <url>http://100.85.69.70:8081/nexus/content/groups/public-snapshots</url>
-        </repository>
     </repositories>
-
+    <!-- jar包上传仓库设置 -->
+    <distributionManagement>
+        <repository>
+            <id>shenma</id>
+            <name>scm's Releases</name>
+            <url>http://hc-repo.alibaba.net:8081/nexus/content/repositories/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>shenma</id>
+            <name>scm's snapshot Releases</name>
+            <url>http://hc-repo.alibaba.net:8081/nexus/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 </project>
