--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.sm.wolong</groupId>
-    <artifactId>wolong-whitelist</artifactId>
+    <groupId>com.template.war</groupId>
+    <artifactId>war-template</artifactId>
     <packaging>war</packaging>
     <version>1.0-SNAPSHOT</version>
-    <name>wolong-whitelist Maven Webapp</name>
-    <url>http://e.sm.cn</url>
+    <name>war-template Maven Webapp</name>
+    <url>www.example.com</url>
     <profiles/>
     <properties>
         <spring.version>4.2.6.RELEASE</spring.version>
